# django-sns-view

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  manage.py  pyproject.toml  tox.ini
django_sns_view/: __init__.py  types.py  utils.py  views.py
django_sns_view/tests/: __init__.py  helpers.py  test_utils.py  test_views.py  utils.py  views.py
django_sns_view/tests/test_data/: notifications.py
