[project]
name = "django-sns-view"
version = "0.1.2"
description = "A Django view that can be subscribed to Amazon SNS"
authors = [
    {name = "thelab",email = "thelabdev@thelab.co"}
]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    'Django>=1.7',
    'pyopenssl>=0.13.1',
    'pem>=16.0.0',
    'requests>=2.18.0',
    'cffi>=1.11.5'
]

[tool.poetry]
packages = [
    { include = "django_sns_view" },
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.9.10"
coverage = "^7.6.12"
django-stubs = "^5.1.3"
tox = "^4.24.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
from_first = true

[tool.ruff.lint.isort]
from-first = true
